--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "g": "^2.0.1",
     "http-errors": "~1.6.2",
     "http-status-codes": "^1.3.0",
     "jade": "~1.11.0",
     "js-sha512": "^0.8.0",
     "jsonwebtoken": "^8.5.0",
     "mongoose": "^5.4.17",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "nodemon": "^1.19.1"
   }
 }
